# fmq

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
ci/: generate-pkgbuild.py
src/: error.rs  lib.rs  main.rs  prelude.rs
tests/: e2e_test.rs
tests/fixtures/: full.md  invalid.md  no-fm.md  partial.md
