[package]
name = "fmq"
version = "0.0.1"
edition = "2021"
description = "FrontMatter querying made easy"
license = "MIT"
keywords = ["frontmatter", "markdown"]
homepage = "https://github.com/thales-maciel/fmq"
repository = "https://github.com/thales-maciel/fmq"
categories = ["command-line-utilities"]
authors = ["Thales Maciel <contato@thalesmaciel.com>"]

[dependencies]
clap = { version = "4.1.1", features = ["derive", "unstable-doc"] }
console = "0.15.7"
directories = "5.0.1"
glob = "0.3.1"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
temp_testdir = "0.2.3"

