[package]
name = "fmq"
version = "0.0.2"
edition = "2021"
description = "FrontMatter querying made easy"
license = "MIT"
keywords = ["frontmatter", "markdown"]
homepage = "https://github.com/thales-maciel/fmq"
repository = "https://github.com/thales-maciel/fmq"
categories = ["command-line-utilities"]
authors = ["Thales Maciel <contato@thalesmaciel.com>"]

[dependencies]
clap = { version = "4.4.5", features = ["derive", "unstable-doc"] }
glob = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.49"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.4"
temp_testdir = "0.2.3"

